--- a/src/app/modules/modals/generatestatement-modal/generatestatement-modal.component.scss
+++ b/src/app/modules/modals/generatestatement-modal/generatestatement-modal.component.scss
@@ -1,8 +1,10 @@
 :host {
     ion-item {
         margin-top: 5px !important;
-        ion-input {
+        input {
             padding-left: 15px !important;
+            border: 0px !important;
+            background-color: transparent !important;
         }
     }
 }
