--- a/src/app/modules/modals/generatestatement-modal/generatestatement-modal.component.html
+++ b/src/app/modules/modals/generatestatement-modal/generatestatement-modal.component.html
@@ -34,7 +34,7 @@
       </ion-col>
     </ion-row>
     <p class="text-medium ion-text-center fs-12 ion-padding-start ion-padding-end">
-        BY providing your information, you will allow Radix Pension to provide best services with the information  provided and manage your information on our secured systems. 
+        BY providing your information, you will allow Cardinal Stone Pension to provide best services with the information  provided and manage your information on our secured systems. 
     </p>
     <div *ngIf="plt.is('ios')">
       <br />
@@ -42,10 +42,3 @@
     </div>
   </ion-content>
 </half-modal>
-
-
-<ion-modal [keepContentsMounted]="true">
-  <ng-template>
-    <ion-datetime id="datetime"></ion-datetime>
-  </ng-template>
-</ion-modal>
