updated entire code base

--- a/src/app/modules/home/components/quick-actions/quick-actions.component.scss
+++ b/src/app/modules/home/components/quick-actions/quick-actions.component.scss
@@ -21,10 +21,14 @@
         padding-top: 5px;
         padding-bottom: 7px;
         border-radius: 5px !important;
-        background:#161552 !important;
-        --background: #161552 !important;
-        --background-color: #161552 !important;
-        background-color: #161552 !important;
+        // background:#161552 !important;
+        // --background: #161552 !important;
+        // --background-color: #161552 !important;
+        // background-color: #161552 !important;
+        background:#21205c !important;
+        --background: #21205c !important;
+        --background-color: #21205c !important;
+        background-color: #21205c !important;
         i, h2 {
             font-size: 25px !important;
             color: var(--ion-color-white) !important;
