--- a/src/app/modules/accounts/components/accounts/account-portfolio/account-portfolio.component.html
+++ b/src/app/modules/accounts/components/accounts/account-portfolio/account-portfolio.component.html
@@ -1,4 +1,4 @@
-<ion-card color="primary" class="ion-no-padding ion-no-margin no-shadow" style="margin-top: 10px;margin-bottom: 10px;">
+<ion-card color="white" class="ion-no-padding ion-no-margin no-shadow" style="margin-top: 10px;margin-bottom: 10px;">
   <!-- <ion-badge class="bg-primary-overlay" mode="ios">
     <span class="text-dark">Radix Pension Managers</span>
   </ion-badge>
@@ -11,17 +11,16 @@
       <h2 class="text-primary fs-14">{{ source | titlecase }}</h2>
     </ion-label>
   </ion-item> -->
-  <ion-item color="primary" lines="none" detail="false">
+  <!-- <ion-item color="color" lines="none" detail="false">
     <ion-label>
       <p class="fs-12 fw-4">{{ accountNumber | uppercase }} </p>
       <h2 class="fs-25">{{ balance | currency : currency }}</h2>
-      <!-- <p class="fs-12 text-medium">{{ source | titlecase }}</p> -->
       <p class="fs-12 text-medium">Made up of all your investments</p>
     </ion-label>
     <ion-note slot="end">
-      <span class="fs-14 text-white">{{accounts.rsaaccounts.length + accounts.volaccounts.length}} Accounts</span>
+      <span class="fs-14 text-dark">{{accounts.rsaaccounts.length + accounts.volaccounts.length}} Accounts</span>
     </ion-note>
-  </ion-item>
+  </ion-item> -->
 
   <ng-content></ng-content>
 
