--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -4,13 +4,13 @@
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
 
-    <ion-card class="no-shadow ion-no-margin ion-no-padding" style="margin-bottom: 10px;" color="primary">
+    <ion-card class="no-shadow ion-no-margin ion-no-padding">
       <account-portfolio (onViewTransaction)="openTransactions()" (onclick)="globals.openModal($event)" (selectedAccount)="_accountservice.openAccount($event)" [source]="_userservice.user?.EMPLOYER_NAME || 'not set'" [accountNumber]="globals.config.pin || 'not set'" [loader]="loading | async" [accounts]="accounts" [balance]="_accountservice.bal" [currency]="globals.config.currency">
         <ion-list-header>
-          <ion-label color="white">
+          <ion-label color="dark">
             <h2>Quick Actions</h2>
           </ion-label>
-          <ion-button>See All</ion-button>
+          <ion-button color="dark">See All</ion-button>
         </ion-list-header>
         <quick-actions (onSelect)="openQuickAction($event)"></quick-actions>
       </account-portfolio>
