--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -1,6 +1,6 @@
-body.dark {
-  // --ion-color-primary: #fy
 
+.ion-palette-dark.md,
+.ion-palette-dark.ios {
 
   --ion-color-primary: #21205c;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -100,15 +100,6 @@ body.dark {
       --ion-color-shade: var(--ion-color-white-shade);
       --ion-color-tint: var(--ion-color-white-tint);
     }
-  }
-  
-  /*
-     * iOS Dark Theme
-     * -------------------------------------------
-     */
-
-
-  body.dark {
     --ion-background-color: var(--ion-color-light);
     --ion-background-color-rgb: 0, 0, 0;
   
