--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -107,4 +107,23 @@
     --ion-color-shade: var(--ion-color-white-shade);
     --ion-color-tint: var(--ion-color-white-tint);
   }
+
+  .ion-color-primary {
+    --ion-color-base: var(--ion-color-primary);
+    --ion-color-base-rgb: var(--ion-color-primary-rgb);
+    --ion-color-contrast: var(--ion-color-primary-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-primary-contrast-rgb);
+    --ion-color-shade: var(--ion-color-primary-shade);
+    --ion-color-tint: var(--ion-color-primary-tint);
+  }
+	--ion-background-color: var(--ion-color-white) !important;
+	--ion-item-background: transparent;
 }
+
+@import './md';
+@import './theme';
+@import './desktop';
+@import './animate';
+@import './fonts';
+@import './dark';
+@import './ios';
