updated code to older

--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -25,7 +25,7 @@
     <ion-card class="no-shadow bl-primary" *ngIf="_accountservice.bal == 0">
       <ion-item lines="none" detail="false" class="bg-transparent" mode="ios">
         <ion-label>
-          <h2 class="fs-14">Complete Your RADIX profile</h2>
+          <h2 class="fs-14">Complete Your Cardinal Stone profile</h2>
           <p class="fs-12">Let's get your started, fill out your profile on our system</p>
         </ion-label>
         <circleprogress slot="end" [percent]="45" [radius]="25" [stroke]="5"></circleprogress>
