--- a/src/app/modules/modals/support-modal/components/terms/terms.component.html
+++ b/src/app/modules/modals/support-modal/components/terms/terms.component.html
@@ -17,7 +17,7 @@
   <ion-label>
     <h2 class="text-dark">Intellectual Property Rights</h2>
     <p>
-      Other than the content you own, under these Terms, Radix Pension Managers and/or its licensors own all the intellectual property rights and materials contained in this Website.
+      Other than the content you own, under these Terms, Cardinal Stone Pension Managers and/or its licensors own all the intellectual property rights and materials contained in this Website.
       <br />
       You are granted limited license only for purposes of viewing the material contained on this Website.
     </p>
@@ -40,7 +40,7 @@
       <li>using this Website contrary to applicable laws and regulations, or in any way may cause harm to the Website, or to any person or business entity;</li>
       <li>engaging in any data mining, data harvesting, data extracting or any other similar activity in relation to this Website;</li>
       <li>using this Website to engage in any advertising or marketing.</li>
-      <li>Certain areas of this Website are restricted from being access by you and Radix Pension Managers may further restrict access by you to any areas of this Website, at any time, in absolute discretion. Any user ID and password you may have for this Website are confidential and you must maintain confidentiality as well.</li>
+      <li>Certain areas of this Website are restricted from being access by you and Cardinal Stone Pension Managers may further restrict access by you to any areas of this Website, at any time, in absolute discretion. Any user ID and password you may have for this Website are confidential and you must maintain confidentiality as well.</li>
     </ul>
   </ion-label>
 </ion-item>
