--- a/src/app/modules/forgot/components/forgotpassword-form/forgotpassword-form.component.html
+++ b/src/app/modules/forgot/components/forgotpassword-form/forgotpassword-form.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="forgetForm" (ngSubmit)="onsubmit.emit(forgetForm.value)" role="form" class="form">
   <ion-row>
     <ion-col size="12">
-      <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
+      <ion-label aria-label="Cardinal Stone pin" class="fs-12 text-dark">Cardinal Stone Pin</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
-        <ion-input aria-label="radix pin" formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
+        <ion-input aria-label="Cardinal Stone pin" formControlName="pin" aria-label="Cardinal Stone pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
       </ion-item>
       <div class="validation-errors fs-12 text-danger">
         <div *ngFor="let validation of validation_messages.pin">
