--- a/src/app/modules/modals/support-modal/components/privacy/privacy.component.html
+++ b/src/app/modules/modals/support-modal/components/privacy/privacy.component.html
@@ -5,7 +5,7 @@
   <ion-label>
     <h2 class="text-dark">Intellectual Property Rights</h2>
     <p>
-      Other than the content you own, under these Terms, Radix Pension Managers and/or its licensors own all the intellectual property rights and materials contained in this Website.
+      Other than the content you own, under these Terms, Cardinal Stone Pension Managers and/or its licensors own all the intellectual property rights and materials contained in this Website.
       <br /> <br />
       You are granted limited license only for purposes of viewing the material contained on this Website.
     </p>
