--- a/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
+++ b/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
@@ -1,24 +1,9 @@
 <form [formGroup]="changepasswordForm" (ngSubmit)="onsubmit.emit(changepasswordForm.value)" class="form">
   <ion-row>
-    <!-- <ion-col size="12">
-      <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
-      <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
-        <ion-input aria-label="radix pin" formControlName="PIN" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
-      </ion-item>
-      <div class="validation-errors fs-12 text-danger ion-padding-start">
-        <div *ngFor="let validation of validation_messages.PIN">
-          <div class="error-message" *ngIf="changepasswordForm.get('PIN')?.hasError(validation.type) && changepasswordForm.get('PIN')?.touched">
-            <div>
-              {{" "+validation.message}}
-            </div>
-          </div>
-        </div>
-      </div>
-    </ion-col> -->
     <ion-col size="12">
-      <ion-label aria-label="radix passcode" class="fs-12 text-dark">Radix Passcode</ion-label>
+      <ion-label aria-label="cardinalstone passcode" class="fs-12 text-dark">Cardinal Stone Passcode</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
-        <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="radix passcode" placeholder="XXXXXXX" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
+        <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="cardinalstone passcode" placeholder="XXXXXXX" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
         <ion-button slot="end" (click)="togglePasswordFieldType()" color="dark" fill="clear" style="margin-top: 10px;">
           <i *ngIf="hide" class="ri-eye-close-line ri-xl fs-20"></i>
           <i *ngIf="!hide" class="ri-eye-fill ri-xl fs-20"></i>
