--- a/src/app/modules/login/login.page.html
+++ b/src/app/modules/login/login.page.html
@@ -25,7 +25,7 @@
   <ion-item (click)="globals.openModal('faqmodal')" lines="none" color="white">
     <i class="ri-question-line ri-xl fs-30" style="margin-right: 10px;" slot="start"></i>
     <ion-label>
-      <p class="text-primary fs-12" style="line-height: 16px;">Want to know more ?</p>
+      <p class="text-dark fs-12" style="line-height: 16px;">Want to know more ?</p>
       <p class="text-dark fs-12" style="line-height: 16px;">Read our MicroPension FAQs</p>
     </ion-label>
   </ion-item>
