--- a/src/app/modules/modals/feedback-modal/components/feedback-form/feedback-form.component.html
+++ b/src/app/modules/modals/feedback-modal/components/feedback-form/feedback-form.component.html
@@ -70,10 +70,8 @@
     </ion-col>
   </ion-row>
 
-  <div class="ion-padding">
-    <ion-button id="feedback" type="submit" [disabled]="feedbackForm.invalid" expand="block">
-      Send Feedback Reuqest
-    </ion-button>
-  </div>
+  <ion-button id="feedback" type="submit" color="dark" [disabled]="feedbackForm.invalid" expand="block">
+    Send Feedback Reuqest
+  </ion-button>
   <br />
 </form>
