--- a/src/app/shared/components/onboarding/onboarding.component.html
+++ b/src/app/shared/components/onboarding/onboarding.component.html
@@ -18,7 +18,7 @@
         <img src="assets/img/bg/Acces your RSA.png" id="content-page" />
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="left">
-            <h2 class="fs-20 text-primary ion-margin-bottom bold">Start Pension Planning now</h2>
+            <h2 class="fs-20 text-dark ion-margin-bottom bold">Start Pension Planning now</h2>
             <p class="ion-margin-top">Pension planning? Where dreams meet reality. Start planning your pension now</p>
           </ion-label>
         </ion-item>
@@ -29,7 +29,7 @@
         <img src="assets/img/bg/An enriched future awaits you copy 2.png" id="content-page" />
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="left">
-            <h2 class="fs-20 text-primary ion-margin-bottom bold">Enjoy your retirement</h2>
+            <h2 class="fs-20 text-dark ion-margin-bottom bold">Enjoy your retirement</h2>
             <p class="ion-margin-top">Start your pension journey with us today and enjoy future in retirement</p>
           </ion-label>
         </ion-item>
@@ -40,7 +40,7 @@
         <img src="assets/img/bg/Data recapture.png" id="content-page" />
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="left">
-            <h2 class="fs-20 text-primary ion-margin-bottom bold">Connect Your Friends Anytime</h2>
+            <h2 class="fs-20 text-dark ion-margin-bottom bold">Connect Your Friends Anytime</h2>
             <p class="ion-margin-top">To automatically focus the next input when done with the previous one we modify</p>
           </ion-label>
         </ion-item>
