--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -40,7 +40,7 @@
       </ion-button>
     </ion-col>
     <ion-col size="12">
-      <ion-button type="submit" class="ion-no-border" expand="full" size="large" [disabled]="loginForm.invalid" color="primary">
+      <ion-button type="submit" class="ion-no-border" expand="full" size="large" [disabled]="loginForm.invalid" color="dark">
         <span class="fs-14">Continue</span>
       </ion-button>
       <ion-button expand="full" size="large" fill="clear" mode="ios" color="dark" routerLink="/register">
