--- a/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
+++ b/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
@@ -30,7 +30,7 @@
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <ion-button type="submit" class="ion-no-border" expand="full" size="large" [disabled]="changepasswordForm.invalid" color="primary">
+      <ion-button type="submit" class="ion-no-border" expand="full" size="large" [disabled]="changepasswordForm.invalid" color="dark">
         <span class="fs-14">Change Password</span>
       </ion-button>
     </ion-col>
